[refector]바뀐 API에 맞게 swagger-ui 정보 수정
