# momspt_server/routes/workout/index.js
@@ -1,7 +1,8 @@
 const router = require('express').Router();
 const workout = require('./workout');
 
-router.get('/todayworkoutlist', workout.getTodayWorkoutList);
+router.get('/workoutlist', workout.getTodayWorkoutList);
+router.post('/workoutlist', workout.getDayWorkoutList)
 router.get('/workoutinfo', workout.getInfo);
 router.post('/workoutresult', workout.sendResult);
 router.get('/keypoints', workout.getJson);
